--- a/docs-overrides/home.html
+++ b/docs-overrides/home.html
@@ -1,27 +1,86 @@
 {% extends "main.html" %}
 
 {% block tabs %}
-  {{ super() }}
-  <style>
-    /** Custom CSS goes here **/
-    .md-header{position:initial}.md-main__inner{margin:0}.md-content{display:none}@media screen and (min-width:60em){.md-sidebar--secondary{display:none}}@media screen and (min-width:76.25em){.md-sidebar--primary{display:none}}
-  </style>
+{{ super() }}
 
-  <section class="parallax">
-    <div class="content">
-      <h1> Agency with Observability <br/> &nbsp; <span></span></h1> <!-- Empty h1 for dynamic typing effect -->
-      <p class="centered-paragraph">
-      Speedup your inner loop!
-      </p>
-    </div>
-  </section>
+<section>
+
+</section>
 
 {% endblock %}
 
 {% block content %}
-<!-- You can have custom HTML content here -->
-{% endblock %}
+<link rel="stylesheet" href="css/custom.css">
+<div class="parallax-container">
 
-{% block footer %}
-<!-- You can have custom footer content here -->
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-image"></div>
+    <div class="hero-content">
+      <h1 id="heroTitle"></h1>
+      <p id="heroText"></p>
+      <img src="assets/logo.svg" alt="Logo" class="pulse-logo" width="200" height="200">
+      <div class="hero-button-container button-padding">
+        <a id="heroButton" href="#" class="button"></a>
+      </div>
+    </div>
+  </section>
+
+  <div>
+    <!-- Section 2 -->
+    <section class="card-section">
+      <div class="card">
+        <h2 id="card2Title"></h2>
+        <img src="assets/landing-1.png" alt="Landing Image" class="card-image">
+        <div class="card-content" id="card2Text">
+        </div>
+      </div>
+    </section>
+
+    <!-- Section 3 -->
+    <section class="card-section">
+      <div class="card">
+        <h2 id="card3Title"></h2>
+        <img  src="assets/landing-2.png" alt="Placeholder Image" class="card-image">
+        <div class="card-content" id="card3Text">
+        </div>
+      </div>
+    </section>
+
+    <!-- Section 4 -->
+    <section class="card-section">
+      <div class="card">
+        <h2 id="card4Title"></h2>
+        <img  src="assets/landing-3.png" alt="Placeholder Image" class="card-image">
+        <div class="card-content" id="card4Text">
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <div>
+    <!-- Section 5 -->
+    <section class="card-section">
+      <div class="card">
+        <h2 id="card5Title"></h2>
+        <img  src="assets/landing-1.png" alt="Placeholder Image" class="card-image">
+        <div class="card-content" id="card5Text">
+        </div>
+      </div>
+    </section>
+
+    <!-- Section 6 -->
+    <section class="card-section">
+      <div class="card">
+        <h2 id="card6Title"></h2>
+        <img  src="assets/landing-2.png" alt="Placeholder Image" class="card-image">
+        <div class="card-content" id="card6Text">
+        </div>
+      </div>
+    </section>
+  </div>
+
+</div>
+
+<script src="js/custom.js"></script>
 {% endblock %}
