--- a/docs-overrides/main.html
+++ b/docs-overrides/main.html
@@ -1,6 +1,6 @@
-<!-- Use this file t override template blocks for main.html -->
 {% extends "base.html" %}
 
-{% block htmltitle %}
-  <title>Prompty: Agency With Observability</title>
+{% block tabs %}
+{{ super() }}
+<link rel="stylesheet" href="stylesheets/extra.css">
 {% endblock %}
