initial stable version / landing page

--- a/docs-overrides/home.html
+++ b/docs-overrides/home.html
@@ -22,57 +22,9 @@
     </div>
   </section>
 
-    <!-- Section 2 -->
-    <section class="card-section">
-      <div class="card">
-        <h2 id="card2Title"></h2>
-        <img src="assets/landing-1.png" alt="Landing Image" class="card-image">
-        <div class="card-content" id="card2Text">
-        </div>
-      </div>
-    </section>
-
-    <!-- Section 3 -->
-    <section class="card-section">
-      <div class="card">
-        <h2 id="card3Title"></h2>
-        <img  src="assets/landing-2.png" alt="Placeholder Image" class="card-image">
-        <div class="card-content" id="card3Text">
-        </div>
-      </div>
-    </section>
-
-    <!-- Section 4 -->
-    <section class="card-section">
-      <div class="card">
-        <h2 id="card4Title"></h2>
-        <img  src="assets/landing-3.png" alt="Placeholder Image" class="card-image">
-        <div class="card-content" id="card4Text">
-        </div>
-      </div>
-    </section>
-
-    <!-- Section 5 -->
-    <section class="card-section">
-      <div class="card">
-        <h2 id="card5Title"></h2>
-        <img  src="assets/landing-1.png" alt="Placeholder Image" class="card-image">
-        <div class="card-content" id="card5Text">
-        </div>
-      </div>
-    </section>
-
-    <!-- Section 6 -->
-    <section class="card-section">
-      <div class="card">
-        <h2 id="card6Title"></h2>
-        <img  src="assets/landing-2.png" alt="Placeholder Image" class="card-image">
-        <div class="card-content" id="card6Text">
-        </div>
-      </div>
-    </section>
-
+  <!-- Card Sections Container - Will be populated dynamically -->
+  <div id="cardSectionsContainer"></div>
 </div>
 
 <script src="javascripts/extra.js"></script>
-{% endblock %}ç
+{% endblock %}
