added / examples snippets

--- a/docs-overrides/home.html
+++ b/docs-overrides/home.html
@@ -16,7 +16,7 @@
       <h1 id="heroTitle"></h1>
       <p id="heroText"></p>
       <div class="hero-button-container button-padding">
-        <a id="heroButton" href="#" class="button"></a>
+        <a id="heroButton" href="https://marketplace.visualstudio.com/items?itemName=ms-toolsai.prompty" class="button"></a>
       </div>
       <img src="assets/logo.svg" alt="Logo" class="pulse-logo" width="200" height="200">
     </div>
