add / top banner element

--- a/docs-overrides/main.html
+++ b/docs-overrides/main.html
@@ -1,6 +1,19 @@
 {% extends "base.html" %}
 
+
+{% block header %}
+<!-- Custom Banner -->
+<div class="banner">
+    <p style="display:inline;">
+        <b>Found Prompty Useful? <a href="https://github.com/microsoft/prompty"> Give us a 🌟 on GitHub!</a></b>
+    </p>
+</div>
+
+<!-- Original Header -->
+{% include "partials/header.html" %}
+{% endblock %}
+
+
 {% block tabs %}
 {{ super() }}
-<link rel="stylesheet" href="stylesheets/extra.css">
 {% endblock %}
